[package]
name = "g27-led-bridge"
version = "2.0.0"
edition = "2021"
build = "src/dr2g27/build.rs"
description = "Bridge racing game telemetry (DiRT Rally 2.0, Forza Horizon 5) to Logitech G27 LED RPM indicators"
authors = ["Rajitha Perera <rajiteh@gmail.com>", "Aely0 (original DR2G27)"]
license = "MIT"
repository = "https://github.com/rajiteh/FH5G27"
homepage = "https://github.com/rajiteh/FH5G27"

[lib]
name = "g27_led_bridge"
path = "src/lib.rs"

[[bin]]
name = "g27-led-bridge"
path = "src/dr2g27/main.rs"

[dependencies]
hidapi = "2.4.1"
clap = { version = "4.0", features = ["derive"] }
tray-icon = "0.14"
winit = "0.29"
image = "0.24"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi", "consoleapi"] }

[build-dependencies]
windows_exe_info = "0.4.1"